--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
      <link rel="stylesheet" href="static/style.css" />
-    <title>Welcomee To Romania</title>
+     <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon" />
+    <title>Welcome To Romania</title>
   </head>
    <body>
-     <div class="container">
+     <div class="line-container">
         <div class="open-navbar-icon navbar-icon center">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
+        </div>
         </div>
       <div class="navbar-wrapper">
         <nav class="navbar">
@@ -348,15 +350,18 @@
           </div>
         </div>
        </section>
+       <!--End of Romania-->
              
-       <div class="map">   
+        <!--Map-->
+        <div class="map">   
          <img 
            src= "static/images/romanianmap.jpg" 
             alt= "Romanian Map" />
             </div>
-          
+          <!--End of Map-->
 
-     	<div class="stories-wrapper">
+     	  <!--Stories-->
+          <div class="stories-wrapper">
           <div class="story-bg">
             <div class="story">
               <img
@@ -482,12 +487,11 @@
             </div>
           </div>
         </div>
-      </section>  
       <!-- End of Stories -->
 
       <!-- Contact -->
       <section class="contact">
-        <h2 class="contact-heading">Contact Us</h1>
+        <h2 class="contact-heading">Contact Us</h2>
         <form class="contact-form center">
           <div class="input-group">
             <label>Full Name *</label>
@@ -535,17 +539,19 @@
           <a href="#" class="footer-link">About Us</a>
           <a href="#" class="footer-link">Attractions</a>
           <a href="#" class="footer-link">Contact</a>
-        </div>
+        </div> 
 
-       <div class="networks">
-      <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-      <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-      <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
-       </div>           
+      <div class="networks">
+        <ul>
+        <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
+        </ul>
+      </div>           
        <div class ="design"> 
           &copy; 2021 Distinct Software
       <p>Website Designed & Hosted By Samuel Braide Technologies.</p>
- </div>
+      </div>
       </footer>
 
       <!-- End of Footer -->
