--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <title>Welcome To Romania</title>
   </head>
    <body>
-     <div class="line-container">
+     <div class="container">
         <div class="open-navbar-icon navbar-icon center">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
-        </div>
-        </div>
+    </div>
       <div class="navbar-wrapper">
         <nav class="navbar">
           <div class="close-navbar-icon navbar-icon center">
